<resources>
    <string name="app_name">Proyecto Cibertec</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navProfile">Perfil</string>
    <string name="navTask">Tareas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_user_correo">Correo Electrónico:</string>
    <string name="fragment_user_fullname">Nombre Completo:</string>
    <string name="fragment_user_email">Correo Electrónico</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Eliminar</string>
    <string name="menu_cancel">Cancelar</string>
    <string name="fragment_user_name">Nombre Completo</string>
    <string name="fragment_user_imagedesc">User url image</string>
    <string name="activity_user_edtEmail">Correo Electrónico</string>
    <string name="activity_user_edtName">Nombre Completo</string>
    <string name="activity_user_edtUrlImage">Dirección de Imagen</string>
    <string name="menu_save">Guardar</string>
    <string name="activity_task_name">Título</string>
    <string name="activity_task_timestart">Inicio</string>
    <string name="activity_task_timefinish">Fin</string>
    <string name="activity_task_notificationtitle">Notificaciones</string>
    <string name="notification_add">Añadir</string>
</resources>
