<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/menu_edit"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_delete"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_cancel"
        android:title="@string/menu_cancel"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/menu_save"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>